typescript/checker/tests/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration5.ts.stderr
error: Unexpected token Some(Word(Foo))
 --> $DIR/tests/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration5.ts:2:11
  |
2 |   declare Foo;
  |           ^^^

